--- a/index.css
+++ b/index.css
@@ -11,8 +11,11 @@
   color: #f2f2f2;
   text-align: center;
   padding: 14px 16px;
+  padding-top: 50px;
+  padding-bottom: 50px;
   text-decoration: none;
   font-size: 17px;
+  font-family: "Lucida Console";
 }
 
 /* Add an active class to highlight the current page */
