--- a/index.css
+++ b/index.css
@@ -1,18 +1,18 @@
 /* Add a black background color to the top navigation */
 .topnav {
-  background-color: #9EE472;
+  background-color: #8FBC8F;
   overflow: hidden;
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
 
 /* Style the links inside the navigation bar */
 .topnav a {
-  float: left;
+  float: right;
   display: block;
   color: #f2f2f2;
   text-align: center;
-  padding: 14px 16px;
-  padding-top: 50px;
-  padding-bottom: 50px;
+  padding: 14px 16px; 
   text-decoration: none;
   font-size: 17px;
   font-family: "Lucida Console";
