--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@
 
 /* Style the links inside the navigation bar */
 .topnav a {
-  float: right;
+  float: left;
   display: block;
   color: #f2f2f2;
   text-align: center;
