--- a/index.css
+++ b/index.css
@@ -12,7 +12,8 @@
   display: block;
   color: #f2f2f2;
   text-align: center;
-  padding: 14px 16px; 
+  padding: 14px 16px;
+  margin-right: 75px
   text-decoration: none;
   font-size: 17px;
   font-family: "Lucida Console";
@@ -28,22 +29,6 @@
 .topnav .icon {
   display: none;
 }
-
-
-
-/* Add a dark background on topnav links and the dropdown button on hover */
-.topnav a:hover, .dropdown:hover .dropbtn {
-  background-color: #555;
-  color: white;
-}
-
-/* Add a grey background to dropdown links on hover */
-.dropdown-content a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-
 
 /* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
 @media screen and (max-width: 600px) {
