--- a/index.css
+++ b/index.css
@@ -12,10 +12,11 @@
   display: block;
   color: #f2f2f2;
   text-align: center;
-  padding: 14px 16px;
-  margin-right: 75px
+  margin-left: 75px;
+  margin-right: 75px;
+  padding: 14px 16px;  
   text-decoration: none;
-  font-size: 17px;
+  font-size: 25px;
   font-family: "Lucida Console";
 }
 
