--- a/PlantDatabase.css
+++ b/PlantDatabase.css
@@ -2,5 +2,7 @@
   margin-left: auto;
   margin-right: auto;
   text-align: center;
+  font-size: 25px;
+  font-family: "Lucida Console";
   color:#e0ebeb
 }
