--- a/PlantDatabase.css
+++ b/PlantDatabase.css
@@ -1,10 +1,6 @@
 .center {
   margin-left: auto;
   margin-right: auto;
-  text-align: center;
-  font-size: 25px;
-  font-family: "Lucida Console";
-  color:#e0ebeb
 }
 
 table, th, td {
@@ -13,8 +9,15 @@ table, th, td {
 
 th {
   height: 70px;
+  font-size: 40px;
+  font-family: "Lucida Console";
+  background-color:#8FBC8F
 }
 
 td {
   height: 70px;
+  text-align: center;
+  font-size: 25px;
+  font-family: "Lucida Console";
+  background-color: #afcfaf;
 }
