--- a/PlantDatabase.css
+++ b/PlantDatabase.css
@@ -7,6 +7,10 @@ table, th, td {
   border: 1px solid #f2f2f2;
 }
 
+th,td {
+  padding: 20px;
+  text-align: center;
+
 th {
   height: 70px;
   font-size: 40px;
